[gd_scene load_steps=2 format=2]

[ext_resource path="res://player/SitArea.gd" type="Script" id=1]

[node name="SitArea" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="sitPosition" type="Position2D" parent="."]
__meta__ = {
"_gizmo_extents_": 30.0
}

[connection signal="body_entered" from="." to="." method="_on_SitArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SitArea_body_exited"]
